updated formatting and margins

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -158,3 +158,8 @@ html{-ms-text-size-adjust:150%;-webkit-text-size-adjust:150%}body{margin:0}
 
 /* Container - Sets a container margin and padding*/
 .css-container,.css-panel{padding:0.01em 16px}.css-panel{margin-top:16px;margin-bottom:16px}
+
+.main-text{
+  margin-left: 15%;
+  margin-right: 15%;
+}
