--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,10 @@ h3 {
     font-family: Helvetica;
     font-size: 200%;
 }
+h4 {
+  font-family: Helvetica;
+  font-size: 200%;
+}
 p {
     font-family: Helvetica;
     color: rgb(0, 0, 0);
