--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,8 +16,14 @@ h3 {
 }
 h4 {
   font-family: Helvetica;
-  font-size: 200%;
+  font-size: 100%;
 }
+h5 {
+  font-family: Helvetica;
+  font-size: 100%;
+}
+
+
 p {
     font-family: Helvetica;
     color: rgb(0, 0, 0);
