--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,15 +31,13 @@ p {
 .maintext {
     margin-left:15%
 }
-
+.main-text{
+  margin-left: 10%;
+  margin-right: 10%;
+}
 .indent {
   text-indent:9%
 }
-
-
-
-
-
 
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 html{-ms-text-size-adjust:150%;-webkit-text-size-adjust:150%}body{margin:0}
@@ -165,10 +163,6 @@ html{-ms-text-size-adjust:150%;-webkit-text-size-adjust:150%}body{margin:0}
 .css-page-title{color:rgb(57, 30, 212)!important;background-color:#f018d3!important}
 .css-sidebar-color{color:rgb(20, 73, 187)!important;background-color:#f70000!important}
 
-/* Side bar - Side bar for navigation*/
-.css-sidebar{height:100%;width:15%;background-color:rgb(204, 29, 29);position:fixed!important;z-index:1;overflow:auto;}
-.css-bar-block{padding:8px 16px;text-align:center}
-.css-bar-item{padding:8px 16px;text-align:left;width:auto;border:none;display:block;outline:0;white-space:normal;font-size:120%}
 
 /* Button - Sets button colour behavour*/
 .css-button:hover{color:#ffffff!important;background-color:#ffffff!important}
@@ -179,4 +173,24 @@ html{-ms-text-size-adjust:150%;-webkit-text-size-adjust:150%}body{margin:0}
 .main-text{
   margin-left: 10%;
   margin-right: 10%;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: rgb(92, 92, 92);
+  color:rgb(255, 255, 255);
+  font-size: 12px;
+}
+
+a.footer:link {
+  color:rgb(255, 255, 255)
+}
+
+a.footer:visited {
+  color:rgb(198, 202, 248)
+}
+
+a.footer:hover {
+  color:rgb(153, 243, 255)
 }
