--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,7 @@ p {
 }
 
 .figure-style{
-  float: right;
+  float: center;
   width:25%;
 }
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
