updates Robs page
added code and data for personalities tables

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -198,3 +198,21 @@ a.footer:visited {
 a.footer:hover {
   color:rgb(153, 243, 255)
 }
+
+
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
