--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,21 +50,10 @@ p {
 .figure-style-40{
   float: right;
   border-color: #333;
+  padding: 10px;
   width: 40%;
   margin: auto;
 }
-
-.figure-style-pd{
-  padding-top: 0px;
-  padding-right: 100px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  float: right;
-  border-color: #333;
-  width: 40%;
-  margin: auto;
-  }
-
 
 
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
